--- a/.gitignore
+++ b/.gitignore
@@ -164,7 +164,7 @@ voc/VOCtrainval_11-May-2012.tar
 voc/VOCdevkit
 checkpoint
 result
-result2
+cam_result
 result_dep
 parttest.py
 cam_deprecated.py
